<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".features.valuteListScreen.presentation.ValuteListFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewValuteList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valuteItemLabel" />

    <TextView
        android:id="@+id/textViewDateFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textViewDateBefore"
        app:layout_constraintStart_toStartOf="@+id/textViewDateBefore"
        app:layout_constraintTop_toTopOf="@+id/textViewDateFromLabel"
        tools:text="01/03/2022" />

    <TextView
        android:id="@+id/textViewDateBefore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDateBeforeLabel"
        app:layout_constraintStart_toEndOf="@+id/textViewDateBeforeLabel"
        tools:text="01/03/2022" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="Update list"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDateBefore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewDateFrom" />

    <TextView
        android:id="@+id/textViewDateFromLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_from"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDateBeforeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/date_before"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDateFromLabel" />

    <LinearLayout
        android:id="@+id/valuteItemLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDateBefore">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDateLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:singleLine="false"
                android:text="@string/date"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textViewNominal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nominal"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textViewValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/value"
                android:textColor="@color/black" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/black" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>